--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@google/genai": "^0.4.0",
+    "@types/leaflet": "^1.9.21",
+    "bootstrap": "^5.3.8",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.15.4"
