--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# local env files
+.env*.local
+
+*.env
+.env
+.env.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
